--- a/src/main/java/file/engine/frames/SettingsFrame.form
+++ b/src/main/java/file/engine/frames/SettingsFrame.form
@@ -243,7 +243,7 @@
                       </component>
                     </children>
                   </grid>
-                  <grid id="21c26" binding="tabSearchSettings" layout-manager="GridLayoutManager" row-count="10" column-count="6" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                  <grid id="21c26" binding="tabSearchSettings" layout-manager="GridLayoutManager" row-count="11" column-count="6" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                     <margin top="0" left="0" bottom="0" right="0"/>
                     <constraints>
                       <tabbedpane title="Search settings"/>
@@ -383,13 +383,21 @@
                       </component>
                       <component id="5b7b6" class="javax.swing.JLabel" binding="labelSearchSettingsPlaceholder">
                         <constraints>
-                          <grid row="9" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                          <grid row="10" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                         </constraints>
                         <properties>
                           <text value=""/>
                         </properties>
                       </component>
                       <component id="15f7e" class="javax.swing.JLabel" binding="labelSearchSettingsPlaceholder2">
+                        <constraints>
+                          <grid row="9" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                        </constraints>
+                        <properties>
+                          <text value="  "/>
+                        </properties>
+                      </component>
+                      <component id="cbad5" class="javax.swing.JLabel" binding="labelHolder6">
                         <constraints>
                           <grid row="8" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                         </constraints>
@@ -869,7 +877,7 @@
                       </component>
                     </children>
                   </grid>
-                  <grid id="8b55c" binding="tabCache" layout-manager="GridLayoutManager" row-count="9" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                  <grid id="8b55c" binding="tabCache" layout-manager="GridLayoutManager" row-count="10" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                     <margin top="0" left="0" bottom="0" right="0"/>
                     <constraints>
                       <tabbedpane title="Cache"/>
@@ -968,7 +976,7 @@
                       </hspacer>
                       <component id="8d6ed" class="javax.swing.JLabel" binding="labelCachePlaceholder">
                         <constraints>
-                          <grid row="8" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                          <grid row="9" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                         </constraints>
                         <properties>
                           <text value="  "/>
@@ -982,6 +990,14 @@
                         </constraints>
                         <properties>
                           <opaque value="false"/>
+                        </properties>
+                      </component>
+                      <component id="60e05" class="javax.swing.JLabel" binding="labelHolder5">
+                        <constraints>
+                          <grid row="8" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                        </constraints>
+                        <properties>
+                          <text value="   "/>
                         </properties>
                       </component>
                     </children>
@@ -1140,7 +1156,7 @@
                     </properties>
                     <border type="empty"/>
                     <children>
-                      <grid id="76311" binding="PluginSettingsPanel" layout-manager="GridLayoutManager" row-count="7" column-count="7" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                      <grid id="76311" binding="PluginSettingsPanel" layout-manager="GridLayoutManager" row-count="8" column-count="7" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                         <margin top="0" left="0" bottom="0" right="0"/>
                         <constraints>
                           <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -1237,7 +1253,7 @@
                           </component>
                           <component id="6c6f1" class="javax.swing.JLabel" binding="placeholderPlugin2">
                             <constraints>
-                              <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                              <grid row="7" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                             </constraints>
                             <properties>
                               <text value="   "/>
@@ -1275,9 +1291,17 @@
                               <text value="    "/>
                             </properties>
                           </component>
+                          <component id="b354b" class="javax.swing.JLabel" binding="labelHolder2">
+                            <constraints>
+                              <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                            </constraints>
+                            <properties>
+                              <text value="   "/>
+                            </properties>
+                          </component>
                         </children>
                       </grid>
-                      <grid id="1c394" binding="PluginListPanel" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                      <grid id="1c394" binding="PluginListPanel" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                         <margin top="0" left="0" bottom="0" right="0"/>
                         <constraints>
                           <grid row="2" column="0" row-span="2" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -1315,10 +1339,18 @@
                           </component>
                           <component id="844c3" class="javax.swing.JLabel" binding="placeholderPlugin5">
                             <constraints>
-                              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                              <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                             </constraints>
                             <properties>
                               <text value="    "/>
+                            </properties>
+                          </component>
+                          <component id="545c5" class="javax.swing.JLabel" binding="labelHolder">
+                            <constraints>
+                              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                            </constraints>
+                            <properties>
+                              <text value="     "/>
                             </properties>
                           </component>
                         </children>
@@ -1471,7 +1503,7 @@
                       </component>
                     </children>
                   </grid>
-                  <grid id="74a0e" binding="tabLanguage" layout-manager="GridLayoutManager" row-count="4" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                  <grid id="74a0e" binding="tabLanguage" layout-manager="GridLayoutManager" row-count="5" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                     <margin top="0" left="0" bottom="0" right="0"/>
                     <constraints>
                       <tabbedpane title="Language settings"/>
@@ -1540,15 +1572,23 @@
                       </component>
                       <component id="c3430" class="javax.swing.JLabel" binding="labelLanguagePlaceholder">
                         <constraints>
-                          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                         </constraints>
                         <properties>
                           <text value=" "/>
                         </properties>
                       </component>
+                      <component id="68773" class="javax.swing.JLabel" binding="labelHolder3">
+                        <constraints>
+                          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                        </constraints>
+                        <properties>
+                          <text value="  "/>
+                        </properties>
+                      </component>
                     </children>
                   </grid>
-                  <grid id="42c04" binding="tabCommands" layout-manager="GridLayoutManager" row-count="6" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                  <grid id="42c04" binding="tabCommands" layout-manager="GridLayoutManager" row-count="7" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                     <margin top="0" left="0" bottom="0" right="0"/>
                     <constraints>
                       <tabbedpane title="My commands"/>
@@ -1625,10 +1665,18 @@
                       </component>
                       <component id="d3106" class="javax.swing.JLabel" binding="labelCommandsPlaceholder">
                         <constraints>
-                          <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                          <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                         </constraints>
                         <properties>
                           <text value="  "/>
+                        </properties>
+                      </component>
+                      <component id="ffd5c" class="javax.swing.JLabel" binding="labelHolder4">
+                        <constraints>
+                          <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                        </constraints>
+                        <properties>
+                          <text value="   "/>
                         </properties>
                       </component>
                     </children>
