修复数据库可能连续处理事件导致的崩溃

--- a/src/main/java/file/engine/frames/SettingsFrame.form
+++ b/src/main/java/file/engine/frames/SettingsFrame.form
@@ -12,7 +12,7 @@
       <opaque value="false"/>
       <preferredSize width="850" height="600"/>
       <requestFocusEnabled value="true"/>
-      <verifyInputWhenFocusTarget value="true"/>
+      <verifyInputWhenFocusTarget value="false"/>
       <visible value="true"/>
     </properties>
     <border type="none"/>
